<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/Home"
            android:icon="@drawable/home"
            />
        <item
            android:id="@+id/product"
            android:title="@string/Product"
            android:icon="@drawable/product"
            />

        <item
            android:id="@+id/material"
            android:title="@string/Material"
            android:icon="@drawable/materials"
            />

    </group>

    <item android:title="Transacations">
        <menu>
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/dailyProduct"
            android:title="@string/DailyProduct"
            android:icon="@drawable/daily_product"
            />

        <item
            android:id="@+id/productOutgoing"
            android:title="@string/ProductOutgoing"
            android:icon="@drawable/product_outgoing"
            />

        <item
            android:id="@+id/materialIncoming"
            android:title="@string/MaterialIncoming"
            android:icon="@drawable/material_incoming"
            />

    </group>
        </menu>

    </item>

    <item android:title="Profile">
        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/logout"
                    android:title="@string/Logout"
                    android:icon="@drawable/logout"
                    />

            </group>
        </menu>

    </item>
</menu>